# linuxs_sockets

./: CMakeLists.txt
client/: CMakeLists.txt  inet_sock.c  inet_sock.h  local_server.c  local_server.h  main.c  timer.h  timer_lib.c  timer_lib.h  tools.c  tools.h
server/: CMakeLists.txt  main.c  server.c  server.h  time_lib.c  time_lib.h  tools.c  tools.h
